--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,5 +28,8 @@
         <item name="windowNoTitle">true</item>
 <!--        <item name="android:windowIsFloating">true</item>-->
         <item name="android:backgroundDimEnabled">false</item>
+
+        <item name="android:showOnLockScreen">true</item>
+        <item name="android:showWhenLocked" tools:targetApi="o_mr1">true</item>
     </style>
 </resources>
