--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#55000000"
+    android:clickable="true"
+    android:focusable="true"
     tools:context=".MainActivity">
 
     <tk.zwander.rebooter.AutoFitGridRecyclerView
