Extract values to resources

--- a/app/src/main/res/layout/power_button.xml
+++ b/app/src/main/res/layout/power_button.xml
@@ -54,11 +54,11 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:layout_marginBottom="@dimen/button_label_margin_bottom"
         android:textSize="@dimen/button_label_text_size"
-        android:textColor="?android:textColorPrimary"
-        android:shadowColor="#000"
-        android:shadowDx="2"
-        android:shadowDy="2"
-        android:shadowRadius="5"
+        android:textColor="@color/button_text_color"
+        android:shadowColor="@color/text_shadow_color"
+        android:shadowDx="@integer/text_shadow_x_offset"
+        android:shadowDy="@integer/text_shadow_y_offset"
+        android:shadowRadius="@integer/text_shadow_radius"
         android:textAlignment="center"
         tools:text="@string/shut_down"
         />
