--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -42,6 +42,11 @@
     <dimen name="remove_button_mar_start">38dp</dimen>
     <dimen name="remove_button_mar_top">4dp</dimen>
 
+    <dimen name="add_button_width">48dp</dimen>
+    <dimen name="add_button_height">48dp</dimen>
+
+    <dimen name="add_dialog_list_padding">16dp</dimen>
+
     <item name="match_parent" format="integer" type="dimen">-1</item>
     <item name="wrap_content" format="integer" type="dimen">-2</item>
 </resources>
