Make visible bottom bar

--- a/app/src/main/res/values/booleans.xml
+++ b/app/src/main/res/values/booleans.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <bool name="allow_blur">true</bool>
+    <bool name="allow_blur">false</bool>
 </resources>
