--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/frame"
     android:layout_width="@dimen/frame_width"
     android:layout_height="@dimen/frame_height"
@@ -25,11 +25,23 @@
         tools:listitem="@layout/power_button"
         />
 
-    <FrameLayout
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/add_wrapper"
         android:layout_width="match_parent"
         android:layout_height="?listPreferredItemHeightLarge"
-        android:layout_gravity="bottom|center">
+        android:layout_gravity="bottom|center"
+        android:layout_marginStart="@dimen/button_bar_margin_start"
+        android:layout_marginEnd="@dimen/button_bar_margin_start"
+        app:cardBackgroundColor="@color/button_bar_background"
+        app:cardForegroundColor="@color/button_bar_background"
+        app:cardElevation="@dimen/card_elevation"
+        app:cardCornerRadius="@dimen/card_corner_radius">
+
+        <FrameLayout
+            android:id="@+id/button_bar_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
 
         <com.github.florent37.shapeofview.shapes.CircleView
             android:id="@+id/add_button"
@@ -60,6 +72,6 @@
 
         </com.github.florent37.shapeofview.shapes.CircleView>
 
-    </FrameLayout>
+    </com.google.android.material.card.MaterialCardView>
 
 </FrameLayout>
