--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -47,6 +47,9 @@
 
     <dimen name="add_dialog_list_padding">16dp</dimen>
 
+    <dimen name="button_bar_margin_start">16dp</dimen>
+    <dimen name="button_bar_margin_end">16dp</dimen>
+
     <item name="match_parent" format="integer" type="dimen">-1</item>
     <item name="wrap_content" format="integer" type="dimen">-2</item>
 </resources>
