Remove button bar background

--- a/app/src/main/res/drawable/add_button_dialog_background.xml
+++ b/app/src/main/res/drawable/add_button_dialog_background.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
 
     <gradient
-        android:startColor="@color/button_bar_1"
-        android:endColor="@color/button_bar_2"
+        android:startColor="@color/dialog_1"
+        android:endColor="@color/dialog_2"
         android:angle="-45"
         />
 
